--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	</script>
+    <script
+	id="sap-ui-bootstrap"
+	src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+	data-sap-ui-theme="sap_belize"
+	data-sap-ui-libs="sap.m"
+	data-sap-ui-compatVersion="edge"
+	data-sap-ui-async="true"
+	data-sap-ui-onInit="module:UI5/index"
+	data-sap-ui-resourceroots='{
+		"UI5": "./"
+	}'>
+
+</script>
 	<meta charset="utf-8">
 	<title>SAPUI5 Walkthrough</title>
 </head>
-<body>
-	<div>Hello UI5</div>
+<body class="sapUiBody" id="content">
+	
 </body>
 </html>
