--- a/webapp/index.html
+++ b/webapp/index.html
@@ -18,6 +18,7 @@
 	<title>SAPUI5 Walkthrough</title>
 </head>
 <body class="sapUiBody" id="content">
-	
+	<div data-sap-ui-component data-name="sap.ui.demo.walkthrough" data-id="container" data-settings='{"id" : "walkthrough"}'>
+	</div>
 </body>
 </html>
